# arrow_bcp

./: .gitignore  README.md  bcp.py  haha.py  helper.py  pyproject.toml  setup.py
examples/: benchmark_insert.ipynb  clone_database.ipynb
src-zig/: build.zig  zig_ext.zig
src/arrow_bcp/: bcp_con.py  bcp_data.py  bcp_format.py
ziggin/: build.zig
ziggin/src/: root.zig
